--- a/ckanext/publicamundi/themes/geodata/templates/snippets/search_form_top.html
+++ b/ckanext/publicamundi/themes/geodata/templates/snippets/search_form_top.html
@@ -30,7 +30,7 @@
   {% if sorting %}
       <div class="form-select control-group control-order-by">
         <label for="field-order-by">{{ _('Order by') }}</label>
-        <select id="field-order-by" name="sort">
+        <select id="field-order-by" class="select-style" name="sort">
           {% for label, value in sorting %}
             {% if label and value %}
               <option value="{{ value }}"{% if sorting_selected == value %} selected="selected"{% endif %}>{{ label }}</option>
@@ -43,9 +43,8 @@
   {% endblock %}
 
   {% block search_title %}
-  <div class="form-title"> {{ _('Search Filters') }} </div>
   {% if not no_title %}
-  <div class="form-title middle-text">{% snippet 'snippets/search_result_text.html', query=query, count=count, type=type %}</div>
+  <div class="form-title">{% snippet 'snippets/search_result_text.html', query=query, count=count, type=type %}</div>
     {% endif %}
   {% endblock %}
 
