--- a/ckanext/publicamundi/themes/geodata/public/css/main.css
+++ b/ckanext/publicamundi/themes/geodata/public/css/main.css
@@ -20,8 +20,15 @@ textarea, input{
     font-family: 'ACMuliLight', Helvetica, Arial, sans-serif !important;
     padding-top:5px;
 }
+
 a {
     color: #4E59A4;
+}
+p a{
+    font-weight: bold;
+}
+.module a{
+    font-weight: normal;
 }
 .heading, h1, h2, h3, h4, h5, h6{
     font-family: 'ACMuli', Helvetica, Arial, sans-serif;
@@ -52,9 +59,7 @@ a {
 }
 .account-masthead .account{
 }
-.account-masthead .account ul{
-    //display: block;
-    //position: absolute;
+.mainmenu{
 }
 .account-masthead .account .notifications a span{
     font-size:13px;
@@ -78,11 +83,12 @@ a {
     text-align: left;
     color: #4E59A4;
     line-height: 30px;
-    //padding: 0;
+    padding: 0 0 0 10px;
+    font-weight: normal;
 }
 
 .account-masthead .account ul li a.sub{
-    font-weight: bold;
+    font-weight: normal;
 }
 .account-masthead .authed > a{
     //display: block;
@@ -96,6 +102,7 @@ a {
     background-color: #4E59A4;
     color: #fff;
 }
+
 .notifications-profile{
     display: block;
     float: left;
@@ -124,19 +131,20 @@ a {
     text-align: left;
     z-index: 5000;
     position: relative;
-    display: block;
     margin: 0;
     list-style: none;
     float: right;
     border: none;
+    overflow: visible;
     }
+
 .user-menu .nav-pills{
     margin-bottom: 0;
 }
 
 
-.user-menu li {
-        display: block;
+.user-menu > li {
+        display: inline;
         position: relative;
         cursor: pointer;
         margin: 0;
@@ -147,18 +155,17 @@ a {
 .user-menu li:hover {
         z-index: 5000;
     }
-.user-menu li a{
-        //width: 100%;
-        //max-width: 250px;
-        //min-width: 80px;
-}
 
 .user-menu > li > a{
     border-top: 2px transparent solid;
-        border-left: 2px transparent solid;
-        border-right: 2px transparent solid;
+    border-left: 2px transparent solid;
+    border-right: 2px transparent solid;
+    padding: 0;
+    min-width: 75px;
+    max-height: 32px;
+    overflow: hidden;
 }
-.user-menu li:hover a{
+.user-menu > li:hover a{
         background: #fff;
         border-left: 2px #4E59A4 solid;
         border-right: 2px #4E59A4 solid;
@@ -169,20 +176,20 @@ a {
     }
 .user-menu > li  ul > li {
     background: #fff;
-    //width: 100%;
+    width: 100%;
+    //width: auto;
+    //max-width: 100%;
+    display: inline;
 }
 
-.user-menu > li > ul > li:hover {
-}
 .user-menu > li > ul > li:last-child a{
     border-bottom: 2px #4E59A4 solid;
 }
-.user-menu li a span{
-    white-space:nowrap;
-    overflow: hidden;
-    display: block;
+.user-menu > li > a > span{
+    padding: 0 10;
 }
-.user-menu li ul{
+.user-menu > li > ul{
+        width: 100%;
         padding: 0;
         margin: 0;
         position: absolute;
@@ -197,25 +204,25 @@ a {
         -transition: opacity 0.2s;
 }
 .user-menu li ul li { 
-        width: 100%;
-        display: block; 
+        //width: 100%;
+        //display: block; 
         }
 
-.user-menu li ul li:hover{
-        background-color: #4E59A4;
-        color: #fff;
+.user-menu > li > ul > li:hover{
+        //background-color: #4E59A4;
+        //color: #fff;
 
 }
 
-.user-menu li:hover ul {
-                display: block;
-                opacity: 1;
-                visibility: visible;
+.user-menu > li:hover > ul {
+        display: block;
+        opacity: 1;
+        visibility: visible;
 }
 
 .viewprofile, .viewprofile a{
     //margin: 0;
-    min-width: 160px;
+    //min-width: 160px;
     //max-width:230px;
     //width: 100%;
     //padding: 5px;
@@ -223,7 +230,7 @@ a {
 .viewprofile span{
 }
 .language, .language a{
-    min-width: 80px;
+    //min-width: 80px;
 }
 .down-arrow:before{
     content:"";
@@ -232,23 +239,32 @@ a {
     margin-left: 10px;
     display: block;
     position: relative;
-    float: left;
+    float: right;
     width:0;
     height: 0;
     border-left: 5px solid transparent;
     border-right: 5px solid transparent;
-            
     border-top: 5px solid #4E59A4;
 }
 .down-arrow:hover:before{
-    border-top-color: #fff;
-}
+    border-left: 5px solid transparent;
+    border-right: 5px solid transparent;
 
+}
+.user-menu > li a:hover .down-arrow:before{
+   border-top: 5px solid #fff;
+    //border-top: 5px solid #4E59A4;
+}
 #homemenu .nav {
     margin: 0;
+    float:right;
 }
 #homemenu .logo{
     padding: 10px;
+}
+.logo:hover img{
+    opacity: 0.5;
+    filter: alpha(opacity=40);
 }
 #homemenu .nav li a{
     font-size: 16px;
@@ -301,6 +317,7 @@ a {
     background: transparent;
     color: #fff;   
 }
+
 .alt-nav li:hover a:after{
     content:"";
     //float: left;
@@ -337,7 +354,46 @@ a {
     border-color: #7C7C7F;
     border-radius: 0;
 }
+
+.nav > li > a > .hover-icon{
+    margin-top: 2px;
+    margin-right: -7px !important;
+    float: right;
+    display: none;
+    font-size: 16px;
+    color: #666;
+}
+.nav > li.active > a > .hover-icon{
+    margin-top: -18px;
+    margin-right: -7px !important;
+    float: right;
+    display: block;
+    font-size: 16px;
+    color: #fff;
+}
+
+.nav > li > a:hover > .hover-icon{
+    display: block;
+}
+.nav > li.active > a:hover > .hover-icon{
+}
+
+
+.nav-facet .nav-item > a:hover:after,
+.nav-facet .nav-item > a:after,
+.nav-facet .nav-item.active > a:after,
+.nav-facet .nav-item.active > a:hover:after
+{
+    display: none;
+}
+
 /* Home background */
+.front-page-loader{
+    display:block;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+}
 .feedback-form{
     //display: block;
     position: fixed;
@@ -371,6 +427,10 @@ a {
     background-repeat: no-repeat;
     background-size: cover;
     background-color: rgba(123,123,321,0.8);
+    max-height: 500px;
+    //min-height: 450px;
+    //height: 60vh;
+    //min-height: 100px;
 }
 .stayinview{
 }
@@ -384,6 +444,7 @@ a {
     z-index: 1000;
     border: 4px #4E59A4 solid;
     max-width: 350px;
+    display: none;
 
 }
 .promotebox .module-content:first-child{
@@ -392,7 +453,29 @@ a {
     border: 0;
     padding: 30px;
 }
-
+#promote-close{
+    float:right;
+    margin-top:-42px;
+    margin-right: -42px;
+    border-radius: 50%;
+    width: 25px;
+    height: 25px;
+    color: #4E59A4;
+    background-color: #fff;
+    font-family: 'ACMuliLight';
+    font-weight: bold;
+    font-size: 11px;
+    text-align: center;
+    border: 2px #4E59A4 solid;
+}
+#promote-close:hover{
+    color: #fff;
+    background-color: #4E59A4;
+    border: 2px #4E59A4 solid;
+}
+.featured{
+    margin-top:20px;
+}
 /* Home Slider */
 
 #slider_container{
@@ -485,6 +568,7 @@ a {
 
 }
 #menu-block-home {
+    margin-top:2px;
     //padding: 0 0 10px 0;
 }
 .enabled{
@@ -573,17 +657,24 @@ a {
     display: none !important;
     visibility: 0;
 }
+.shown{
+    display:block;
+}
 .breadcrumb-hide-text a{
     display: none;
 }
 
 .breadcrumb-hide-text:before{
-    content:" ... " !important; 
+    //content:" ... " !important; 
 }
 .breadcrumb-hide-text:after{
     content:"";
 }
 
+.breadcrumb-icon{
+    float: left;
+    margin-right: 10px;
+}
 .gap{
     margin-bottom: 40px;
 }
@@ -591,8 +682,9 @@ a {
     margin-bottom: 100px;
 }
 .toolbar .breadcrumb {
-    padding-top: 12px;
+    padding: 12px 0 6px 0;
     overflow: hidden;
+    line-height: 30px;
 }
 .toolbar .breadcrumb .active a, .toolbar .breadcrumb a.active{
     font-weight: normal;
@@ -602,9 +694,14 @@ a {
 }
 
 .toolbar { 
+    display: block;
     background: #4E59A4;
     margin: 0;
-    height: 40px;
+    min-height: 40px;
+    max-height: 60px;
+}
+.toolbar:hover{
+    transition: max-height 4s ease-in-out;
 }
 .toolbar .btn-primary,.toolbar .btn{
     float:right;
@@ -665,6 +762,9 @@ a {
     float:right;
     margin-top:-42px;
 }
+.search-form .search-input.search-giant button i{
+    font-size: 27px;
+}
 .search-form .search-input button i{
     color: #4E59A4;
     transition: color 0.2s ease-in-out;
@@ -683,9 +783,14 @@ a {
 .search-form-top .search-input.search-giant input{
     padding-left:0;
 }
+.search-form-top .extra{
+    margin-top: 10px;
+    margin-left: 320px;
+}
 .homepage .module-search .search-giant input{
     font-size: 22px;
 }
+
 .search{
 }
 .homepage .module-search{ 
@@ -736,11 +841,13 @@ a {
 }
 .dataset-postheading{
     margin-top:5px;
+    font-weight: normal;
 }
 .dataset-heading{
     margin-bottom:5px;
 }
 .dataset-heading a{
+    font-weight: normal;
     color: #4E59A4;
 }
 #package-list-home .dataset-heading img{
@@ -779,7 +886,11 @@ a {
     //border: 1px #4E59A4 solid;
     //border: 1px #666666 solid;
 }
-
+.facet-icon{
+    margin:0 5px 0 0;
+}
+img[src="/images/various/tags.svg"]{
+}
 .paintme{
     border: 2px #4E59A4 solid;
 }
@@ -806,13 +917,15 @@ a {
     margin-top:3px;
 }
 .secondary .module-content{
-    text-align: center;
+    text-align: left;
 }
 .secondary .module-footer, .module-narrow #dataset-map-attribution{
     background: #F6F6F6;
     margin:0;
     padding: 5px 8px;
     //border-top: 1px #4E59A4 solid;
+}
+.secondary .module-footer{
 }
 .secondary .module-footer a{
     font-size: 12px;
@@ -835,7 +948,7 @@ a {
     font-size:20px;
     background-color: transparent; 
     border-bottom: none;
-    text-align: center;
+    text-align: left;
 }
 .alt-side-style .module{
     padding-left:18px;
@@ -871,7 +984,7 @@ a {
 .nav-simple > li:last-of-type{
     border-bottom: 1px #4E59A4 solid;
 }
-.nav-item.active > a, .nav-aside li.active a, .nav-item.active > a:hover{
+.nav-item.active > a, .nav-aside li.active a, .nav-item.active > a:hover, .nav-item.active > a:focus{
     background: #4E59A4;
 }
 .nav-item.active > a:before, .nav-aside li.active a:before{
@@ -955,12 +1068,16 @@ a {
 }
 .site-footer input[type="text"]  {
     //border: 3px #4E59A4 solid;
-    border: 1px solid #aaa;
+    border: 2px solid #4E59A4;
 }
 .site-footer input[type="text"]:active{
     border:1px solid #5897fb;
 }
-
+.btn-search i{
+    color: #4E59A4;
+    font-size: 17px;
+    transition: color 0.2s ease-in-out;
+}
 /* Dataset Page */
 
 .dataset-dates{
@@ -1078,7 +1195,11 @@ a {
 .resource-item:hover{
     background: #F6f6f6;
 }
+.resource-item .heading{
+    font-weight: normal;
+}
 .label{
+    font-weight: normal;
     border-radius:0;
     text-shadow: none;
 }
@@ -1119,14 +1240,16 @@ a {
 
 .search-form .filter-list{
     display: block;
-    float: left;
+    float: none;
     margin: 20px 0;
 }
-
+.pill a.remove{
+    font-size: 12px;
+}
 .pill .remove{
     box-shadow: none;
     text-shadow: none;
-    border: 2px #6f8890 solid;
+    border: 2px #7C7C7F solid;
     //border: none;
     //width: 12px;
     //height: 16px;
@@ -1281,11 +1404,11 @@ a {
 }
 /* Search page specific */
  .form-title{
-    margin-left: 60px;
+    margin-left: 260px;
+    font-size: 18px;
     display: inline-block;
     position: relative;
-    float: left;
-    padding: 0 20px 0 20px;
+    padding: 4px 20px 0 20px;
 }
 
 .dataset-resources li a{
@@ -1303,6 +1426,13 @@ a {
     margin-left:20%;
 }
 /* CKAN control overrides */
+.form-select select {
+
+    -webkit-border-radius: 0px !important;
+    -moz-border-radius: 0px !important;
+    -o-border-radius: 0px !important;
+    border-radius: 0px !important;
+}
 .select2-container-multi .select2-choices .select2-search-choice{
     font-size: 14px;
     line-height: 13px;
@@ -1360,11 +1490,11 @@ a {
 
 .nav-pills > li > a[href$="/group"]:after {
     content:"";
-    margin-right: 5px;
+    margin-left: 5px;
     margin-top: 5px;
     display: block;
     position: relative;
-    float: left;
+    float: right;
     width:0;
     height: 0;
     border-left: 5px solid transparent;
@@ -1374,7 +1504,7 @@ a {
 }
 
 .nav-pills > li:hover > a[href$="/group"]:after {
-    border-top-color: #fff;
+   //border-top: 5px solid #4E59A4;
 }
 /* Recline */
 .recline-data-explorer .btn{
@@ -1417,14 +1547,26 @@ a {
     top: 5px;
     left: 5px;
 }
+/* Members page */
 
+.add-member-or{
+    float: none;
+    margin-bottom: 30px;
+}
+.add-member-form .row-fluid .control-group{
+    width: 60%;
+}
+.add-member-form .controls{
+    margin-top: 20px;
+}
 /* Matsakonies */
 .label[data-format=data_table]{
     display:none;
 }
 
 
-.format-label[data-format=csv], .format-label[data-format*=csv]
+
+format-label[data-format=csv], .format-label[data-format*=csv]
 {
     background-image: url("../../images/icons/resources/csv.svg");
 }
@@ -1527,3 +1669,14 @@ a {
     background-image: url("../../images/icons/resources/wps.svg");
 }
 
+@media screen and (max-width : 900px){
+    .hero{
+        min-height: 0 !important;
+    }
+    body{
+        border: none;
+    }
+    .promotebox{
+        display: none!important;
+    }
+}
