--- a/ckanext/publicamundi/themes/geodata/templates/footer.html
+++ b/ckanext/publicamundi/themes/geodata/templates/footer.html
@@ -50,9 +50,8 @@
         <div class="quarter footer-links">
             <ul class="unstyled">
                 <li><a href="http://www.imis.athena-innovation.gr"> {{ _('IMIS') }} </a></li>
-                <li><a href="http://www.rasdaman.com"> {{ _('Rasdaman') }} </a></li>
-                <li><a href="http://www.geolabs.fr"> {{ _('Geolabs') }} </a></li>
-                <li><a href="http://www.getmap.gr"> {{ _('GET') }} </a></li>
+                <li><a href="http://inspire.ec.europa.eu/"> {{ _('INSPIRE') }} </a></li>
+                <li><a href="http://open-data.europa.eu/en/data/"> {{ _('EU Open Data Portal') }} </a></li>
             </ul>
         </div>
 
@@ -60,7 +59,7 @@
             <ul class="unstyled">
             <li><a href="http://www.publicamundi.eu">PublicaMundi</a></li>
             <li><a href="https://github.com/PublicaMundi">Github</a></li>
-            <li><a href="https://twitter.com/PublicaMundi">Twitter</a></li>
+            <li><a href="https://twitter.com/geodatagovgr">Twitter</a></li>
             </ul>
         </div>   
       
