--- a/ckanext/publicamundi/themes/geodata/templates/home/layout_slider.html
+++ b/ckanext/publicamundi/themes/geodata/templates/home/layout_slider.html
@@ -6,22 +6,28 @@
               {% snippet 'home/snippets/promoted.html' %}
           </div>
     </div>
-    
-    <div id="slider_container" style="min-height:200px">
-        <div u="slides" class="slides" style="position: absolute; left: 0px; top: 0px; width: 1600px; height: 600px; overflow: hidden;" >
-            <div><a href=""><img u="image" src=" {{ h.url_for_static('/images/screen7.png')}}" /></a></div>
+   <!-- Loading Screen -->
+    <div u="loading" style="position: absolute; top: 45%; left: 50vw;">
+        <!-- your loading screen content here -->
+        <div class="front-page-loader"><img src=" {{ h.url_for_static('/images/loader.gif')}}" /></div>
+    </div>
+    <!-- Slides Container -->
+    <div id="slider_container" style="height:450px;">
+        <div u="slides" class="slides" style="position: absolute; left: 0px; top: 0px; width: 1660px; height: 450px; overflow: visible;" >
+            <div><a href=""> <img u="image" src=" {{ h.url_for_static('/images/screen3.png')}}" /></a></div>
             <div><a href=""> <img u="image" src=" {{ h.url_for_static('/images/screen4.png')}}" /></a></div>
-            <div><a href="/dataset/wind-potential-in-greece"><img u="image" src=" {{ h.url_for_static('/images/screen8.png')}}" /></a></div>
+            <div><a href=""> <img u="image" src=" {{ h.url_for_static('/images/screen1.png')}}" /></a></div>
+            <div><a href=""> <img u="image" src=" {{ h.url_for_static('/images/screen7.png')}}" /></a></div>
         </div>
 
         <div u="navigator" class="jssorb21" style="position: absolute; bottom: 70px; left: 6px;">
             <div u="prototype" style="POSITION: absolute; WIDTH: 19px; HEIGHT: 19px; text-align:center; line-height:19px; color:White; font-size:12px;"></div>
         </div>
-        <span u="arrowleft" class="jssora21l" style="width: 55px; position:absolute; height: 55px; margin-top: 100px; left: 8px;">
+        <!--<span u="arrowleft" class="jssora21l" style="width: 55px; position:absolute; height: 55px; margin-top: 100px; left: 8px;">
         </span>
         <span u="arrowright" class="jssora21r" style="width: 55px; position:absolute; height: 55px; margin-top: 100px; right: 8px">
         </span>
-        <a style="display: none" href="http://www.jssor.com">jQuery Slider</a>
+        <a style="display: none" href="http://www.jssor.com">jQuery Slider</a> -->
     </div> 
     
 {% snippet 'home/snippets/search.html' %}
