--- a/ckanext/publicamundi/themes/geodata/templates/organization/read.html
+++ b/ckanext/publicamundi/themes/geodata/templates/organization/read.html
@@ -1,5 +1,10 @@
 {% ckan_extends %}
 
+{% block breadcrumb_content %}
+  <li>  <img class="breadcrumb-icon" src="{{ h.url_for_static('/images/various/organizations.svg') }}"></img> {% link_for _('Organizations'), controller='organization', action='index' %}</li>
+  <li class="active">{% link_for c.group_dict.display_name|truncate(35), controller='organization', action='read', id=c.group_dict.name %}</li>
+{% endblock %}
+
 {% block primary_content_inner %}
 {% block groups_search_form %}
     {{ super() }}
