--- a/ckanext/publicamundi/themes/geodata/templates/snippets/facet_list.html
+++ b/ckanext/publicamundi/themes/geodata/templates/snippets/facet_list.html
@@ -45,14 +45,24 @@ within_tertiary
       {% set nav_item_class = ' ' %}
       {% set wrapper_class = 'nav-facet nav-facet-tertiary' %}
     {% endif %}
+    {% if items %}
     <section class="{{ wrapper_class or 'module module-narrow module-shallow' }}">
-      <h2 class="module-heading">
-        {% set title = title or h.get_facet_title(name) %}
-        <i class="medium-icon" src="{{ h.url_for_static('/images/various/organizations.svg') }}"></i>
-        {{ title }} <br> <a href="#" class="sort-name">{{_('A-Z')}}</a> <a href="#" class="sort-count">{{_('1<9')}}</a> 
 
+    <h2 class="module-heading">
+        {% if name == 'organization' %}
+        <img class="facet-icon" src="{{ h.url_for_static('/images/various/organizations.svg') }}"></img>
+        {% elif name == 'groups' %}
+        <img class="facet-icon" src="{{ h.url_for_static('/images/various/topics.svg') }}"></img>
+        {% elif name == 'tags' %}
+        <img class="facet-icon" src="{{ h.url_for_static('/images/various/tags.svg') }}"></img>
+        {% elif name == 'res_format' %}
+        <img class="facet-icon" src="{{ h.url_for_static('/images/various/filetype.svg') }}"></img>
+        {% elif name == 'license_id' %}
+        <img class="facet-icon" src="{{ h.url_for_static('/images/various/license.svg') }}"></img>
+        {% endif %}
+        {% set title = title or h.get_facet_title(name) %}
+                {{ title }} <br> <a href="#" class="sort-name">{{_('A Z')}}</a> <a href="#" class="sort-count">{{_('1 <- 9')}}</a> 
       </h2>
-      {% if items %}
         <nav>
         <ul id={{ name }}  title={{title}} class="{{ nav_class or 'unstyled nav nav-simple nav-facet' }} count_desc">
             {% for item in items %}
@@ -62,7 +72,7 @@ within_tertiary
               {% set count = count_label(item['count']) if count_label else ('(%d)' % item['count']) %}
               <li count={{ item['count'] }}  class="{{ nav_item_class or 'nav-item' }}{% if item.active %} active{% endif %}">
                   <a href="{{ href }}" title="{{ label if label != label_truncated else '' }}">
-                    <span>{{ label_truncated }} {{ count }}</span>
+                      <span>{{ label_truncated }} {{ count }}</span>{% if item.active %}<i class="icon-remove-sign hover-icon"></i>{% else %}<i class="icon-plus-sign hover-icon"></i>{% endif %}
                   </a>
                 </li>
             {% endfor %}
@@ -74,14 +84,13 @@ within_tertiary
           
             {% else %} 
            <a href="{{ h.remove_url_param('_%s_limit' % name, extras=extras, alternative_url=alternative_url) }}" class="read-more">{{ _('Show Only Popular {facet_type}').format(facet_type=title) }}</a> 
-
            {% endif %} #}
 
-              <a href="#" class="read-more">{{ _('Show More {facet_type}').format(facet_type=title) }}</a>
+            <a href="#" class="read-more">{{ _('Show More {facet_type}').format(facet_type=title) }}</a>
         </p>
+        {% endif %}
+    </section>
       {% else %}
         <p class="module-content empty">{{ _('There are no {facet_type} that match this search').format(facet_type=title) }}</p>
-      {% endif %}
-    </section>
   {% endif %}
 {% endwith %}
