--- a/ckanext/publicamundi/themes/geodata/templates/snippets/organization.html
+++ b/ckanext/publicamundi/themes/geodata/templates/snippets/organization.html
@@ -17,7 +17,7 @@ Example:
 {% with truncate=truncate or 0, url=h.url_for(controller='organization', action='read', id=organization.name) %}
   <div class="module module-narrow module-shallow context-info">
       <h2 class="module-heading"> {{ _('Organization') }}</h2>
-      {# <i class="icon-building"></i> #}
+      <!--<i class="icon-building"></i> -->
     <section class="module-content">
     {% if organization %}
     {% block image %}
