--- a/ckanext/publicamundi/public/css/main.css
+++ b/ckanext/publicamundi/public/css/main.css
@@ -345,14 +345,20 @@ h1 > .label.package-state {
     padding: 5px 5px 5px 60px;
 }
 
-.resources li.resource-item .btn-group {
-    position: relative;
-    top: 0px;
-    right: 5px;
+.resources li.resource-item .btn-download {
+    //position: relative;
+    //top: 0px;
+    //right: 10px;
+    float: right;
 }
-
+.resource-item .btn-group{
+    position: relative;
+    top: 0;
+    right: 0;
+    float: right;
+}
 .resources li.resource-item .btn-group + .btn-group {
-    margin-right: 5px;
+    //margin-right: 5px;
 }
 
 .resources li.resource-item p.description {
