--- a/ckanext/publicamundi/themes/geodata/templates/footer.html
+++ b/ckanext/publicamundi/themes/geodata/templates/footer.html
@@ -9,8 +9,8 @@
             <li>
                 <form class="section site-search simple-input" action="{% url_for controller='package', action='search' %}" method="get">
                     <div class="field">
-                    <label for="field-sitewide-search">{{ _('Search Datasets') }}</label>
-                    <input id="field-sitewide-search" type="text" name="q" placeholder="{{ _('Search datasets...') }}" />
+                    <label for="field-sitewide-search">{{ _('Search') }}</label>
+                    <input id="field-sitewide-search" type="text" name="q" placeholder="{{ _('Search...') }}" />
                     <button class="btn-search" type="submit"><i class="icon-search"></i></button>
                     </div>
                 </form>
