--- a/ckanext/publicamundi/themes/geodata/templates/snippets/facet_list.html
+++ b/ckanext/publicamundi/themes/geodata/templates/snippets/facet_list.html
@@ -86,7 +86,8 @@ within_tertiary
            <a href="{{ h.remove_url_param('_%s_limit' % name, extras=extras, alternative_url=alternative_url) }}" class="read-more">{{ _('Show Only Popular {facet_type}').format(facet_type=title) }}</a> 
            {% endif %} #}
 
-            <a href="#" class="read-more">{{ _('Show More {facet_type}').format(facet_type=title) }}</a>
+            <a href="#" class="read-more">{{ _('Show More {facet_type}').format(facet_type=title) }}</a> 
+            <a href="#" class="read-less hidden">{{ _('Show Only Popular {facet_type}').format(facet_type=title) }}</a> 
         </p>
         {% endif %}
     </section>
