--- a/ckanext/publicamundi/templates/package/snippets/resources_list-grouped.html
+++ b/ckanext/publicamundi/templates/package/snippets/resources_list-grouped.html
@@ -17,11 +17,33 @@ pkg - A package object that the resources belong to.
 {% set file_resources = h.filtered_list(resources, 'resource_type', 'api', 'ne') %}
 {% set api_resources = h.filtered_list(resources, 'resource_type', 'api', 'eq') %}
 
+{% set raster_resources = h.get_ingested_raster_resources(pkg) %}
+{% set vector_resources = h.get_ingested_vector_resources(pkg) %}
+
 <section id="dataset-resources-files" 
     class="resources {% if resources and not file_resources %}hide{% endif %}"
  >
-    <header><h3 class="inline">{{ _('Data and Resources') }}</h3></header>
-    
+ <header><h3 class="inline">{{ _('Data and Resources') }}</h3>
+ {% block resource_download_ingested %}
+ {% if raster_resources|length >0 or vector_resources|length>0 %}
+    <div class="download-links pull-right">
+      <div class="btn-group pull-right">
+        <a class="btn dropdown-toggle" data-toggle="dropdown"
+          >{{ _('Download as') }} <span class="caret"></span></a>
+        <ul class="dropdown-menu">
+            {% for res in vector_resources %}
+                {% snippet 'package/snippets/resource_item_vector.html', res=res %} 
+            {% endfor %}
+            {% for res in raster_resources %}
+                {% snippet 'package/snippets/resource_item_raster.html', res=res %} 
+            {% endfor %}
+        </ul>
+      </div>
+  </div>
+  {% endif %}
+  {% endblock %}
+    </header>
+
     {% block resource_file_list %}
     {% if file_resources %}
     <ul class="resource-list">
