--- a/ckanext/publicamundi/themes/geodata/templates/package/snippets/resource_item.html
+++ b/ckanext/publicamundi/themes/geodata/templates/package/snippets/resource_item.html
@@ -8,7 +8,7 @@
       <li>
         <a href="{{ url }}">
           {% if res.can_be_previewed %}
-          <div class="btn"> <i class="icon-bar-chart"></i>
+          <div class="btn"> <i class="icon-eye-open"></i>
               {{ _('Preview') }}</div>
           {% else %}
           <div class="btn"> <i class="icon-info-sign"></i>
