--- a/ckanext/publicamundi/themes/geodata/templates/group/read.html
+++ b/ckanext/publicamundi/themes/geodata/templates/group/read.html
@@ -1,5 +1,10 @@
 {% ckan_extends %}
 
+{% block breadcrumb_content %}
+  <li>{% link_for _('Topics'), controller='group', action='index' %}</li>
+  <li class="active">{% link_for c.group_dict.display_name|truncate(35), controller='group', action='read', id=c.group_dict.name %}</li>
+{% endblock %}
+
 
 {% block primary_content_inner %}
 {% block groups_search_form %}
