--- a/ckanext/publicamundi/themes/geodata/templates/snippets/menu_list.html
+++ b/ckanext/publicamundi/themes/geodata/templates/snippets/menu_list.html
@@ -45,8 +45,8 @@ Example:
                 {'name':'geoscientific-information',
                 'display_name':_('Geoscientific Information'),
                 },
-                {'name':'farming',
-                'display_name':_('Farming'),
+                {'name':'climatology-meteorology-atmosphere',
+                'display_name':_('Climatology Meteorology Atmposphere'),
                 },
                 {'name':'environment',
                 'display_name':_('Environment'),
@@ -57,8 +57,8 @@ Example:
                 {'name':'economy',
                 'display_name':_('Economy'),
                 },
-                {'name':'climatology-meteorology-atmosphere',
-                'display_name':_('Meteorology'),
+                {'name':'farming',
+                'display_name':_('Farming'),
                 },
                 {'name':'boundaries',
                 'display_name':_('Boundaries'),
