--- a/ckanext/publicamundi/themes/geodata/templates/home/index.html
+++ b/ckanext/publicamundi/themes/geodata/templates/home/index.html
@@ -111,7 +111,7 @@
                 ('group_index', _('Topics')),
                 ('organizations_index', _('Organizations')),
                 ('maps', _('Maps')),
-                ('developers', _('API')),
+                ('developers', _(' API')),
                 ('news', _('News')),
                 ('about', _('About'))
                 ) }}
@@ -160,7 +160,7 @@
 
 
             {#  {% snippet "home/layout{0}.html".format(homepage_style) %} #}
-    {% snippet "home/layout_slider.html" %}
+    {% snippet "home/layout1.html" %}
     {% endblock %}
 </div>
 
