Added metadata in gettext

--- a/ckanext/publicamundi/templates/package/snippets/package_metadata_table.html
+++ b/ckanext/publicamundi/templates/package/snippets/package_metadata_table.html
@@ -6,7 +6,7 @@
   -%}
   {%- if obj -%}
   <header>
-    <h3 class="inline">{{ 'Metadata' }}</h3>
+    <h3 class="inline">{{ _('Metadata') }}</h3>
     <div class="download-links pull-right">
       <div class="btn-group pull-right">
         <a class="btn dropdown-toggle" data-toggle="dropdown"
