--- a/ckanext/publicamundi/themes/geodata/templates/snippets/menu_list.html
+++ b/ckanext/publicamundi/themes/geodata/templates/snippets/menu_list.html
@@ -8,8 +8,9 @@ Example:
     {% snippet "group/snippets/group_list.html" %}
 
     #}
-    {# INSPIRE Groups #}
-    {% set items = [{'name':'utilities-communication',
+    
+{# INSPIRE Groups #}
+{% set items = [{'name':'utilities-communication',
                 'display_name': _('Utilities Communication'),
                 },
                 {'name':'transportation',
@@ -46,7 +47,7 @@ Example:
                 'display_name':_('Geoscientific Information'),
                 },
                 {'name':'climatology-meteorology-atmosphere',
-                'display_name':_('Climatology Meteorology Atmposphere'),
+                'display_name':_('Climatology Meteorology Atmosphere'),
                 },
                 {'name':'environment',
                 'display_name':_('Environment'),
