--- a/ckanext/publicamundi/themes/geodata/templates/developers/index.html
+++ b/ckanext/publicamundi/themes/geodata/templates/developers/index.html
@@ -14,12 +14,15 @@
             <nav class="section alt-navigation">
           <ul class="alt-nav nav nav-pills">
               <li>
+              {# <img class="facet-icon" src="{{ h.url_for_static('/images/icons/resources/api-mapping.svg') }}"></img> #}
               <a href="/mapping-api/">{{_('Mapping API')}}</a>
               </li>
               <li>
+              {# <img class="facet-icon" src="{{ h.url_for_static('/images/icons/resources/api-data.svg') }}"></img> #}
               <a href="/maps/demo/data-api.html">{{_('Data API')}}</a>
               </li>
               <li>
+              {# <img class="facet-icon" src="{{ h.url_for_static('/images/icons/resources/csw.svg') }}"></img> #}
               <a href="/csw?service=CSW&version=2.0.2&request=GetCapabilities">{{_('CSW API')}}</a>
               </li>
               {% block header_site_navigation_tabs %}
