--- a/ckanext/publicamundi/themes/geodata/templates/home/index.html
+++ b/ckanext/publicamundi/themes/geodata/templates/home/index.html
@@ -160,7 +160,7 @@
 
 
             {#  {% snippet "home/layout{0}.html".format(homepage_style) %} #}
-    {% snippet "home/layout1.html" %}
+    {% snippet "home/layout_slider.html" %}
     {% endblock %}
 </div>
 
