--- a/ckanext/publicamundi/templates/package/snippets/resource_item.html
+++ b/ckanext/publicamundi/templates/package/snippets/resource_item.html
@@ -17,7 +17,7 @@
         <div class="resource-action-buttons">
         {% block resource_item_download %}
         {% if res.resource_type == 'file' %} 
-        {% if raster_resources|length>0 or vector_resources|length>0 or res.id == '722aac7e-5b56-4471-84f4-3f62ba66624f'%}
+        {% if raster_resources|length>0 or vector_resources|length>0 %}
         {# <div class="btn-group">
                 <a class="btn" href="{{ res.url }}" class="btn resource-url-analytics" target="_blank">
                     <i class="icon-download"></i> {{ _('Download') }}</a>
@@ -29,15 +29,7 @@
                     <i class="icon-download"> </i>{{ _('Download as') }} <span class="caret"></span></a>
                 <ul class="dropdown-menu">
                     {% block resource_item_download_links %}
-                    <li>
-               <a href="#" target="_blank">Test 1</a>
-                </li>
-                    {% for raster_res in raster_resources %}
-                        {% snippet 'package/snippets/raster.html', res=raster_res %} 
-                        {% endfor %}
-                    {% for vector_res in vector_resources %}
-                        {% snippet 'package/snippets/vector.html', res=vector_res %} 
-                        {% endfor %}
+                    {# Placeholder for vector/raster storers to fill in download links #}
                     {% endblock %}
                 </ul>
             </div>
