--- a/ckanext/publicamundi/themes/geodata/templates/snippets/menu_item.html
+++ b/ckanext/publicamundi/themes/geodata/templates/snippets/menu_item.html
@@ -13,7 +13,7 @@ Example:
 #}
 {% set type = item.type %}
 {% set url = h.url_for('group_read', action='read', id=item.name ) %}
-{% set img_url = '/images/topics/'+ item.name +'.png' %}
+{% set img_url = '/images/icons/topics/'+ item.name +'.svg' %}
 {# {% set url = h.url_for(type ~ '_read', action='read', id=item.name) %} #}
 <li class="menu-item">
 <a href="{{ url }}">
